--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     android:gravity="center_vertical"
     android:minWidth="100dp"
     android:minHeight="100dp"
+    android:weightSum="4"
     tools:context=".MainActivity">
 
     <TableLayout
@@ -28,11 +29,11 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 android:gravity="clip_vertical|right"
                 android:minHeight="30dp"
                 android:overScrollMode="ifContentScrolls"
-                android:textAlignment="center"
-                android:textSize="18sp" />
+                               android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/display2"
@@ -40,10 +41,11 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 android:gravity="clip_vertical|right"
                 android:minHeight="30dp"
                 android:overScrollMode="ifContentScrolls"
-                android:textAlignment="center"
+
                 android:textSize="18sp" />
 
             <TextView
@@ -52,10 +54,11 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 android:gravity="clip_vertical|right"
                 android:minHeight="30dp"
                 android:overScrollMode="ifContentScrolls"
-                android:textAlignment="center"
+
                 android:textSize="18sp" />
         </TableRow>
 
@@ -70,7 +73,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_weight="1"
+                android:layout_weight="4"
                 android:background="@color/white"
                 android:gravity="right|center_vertical"
                 android:minHeight="65dp"
@@ -88,8 +91,9 @@
                 android:id="@+id/btnS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="C"
@@ -99,8 +103,9 @@
                 android:id="@+id/btnD"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="/"
@@ -110,8 +115,9 @@
                 android:id="@+id/btnU"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="*"
@@ -121,8 +127,9 @@
                 android:id="@+id/btnDEL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="X"
@@ -138,8 +145,9 @@
                 android:id="@+id/btn7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="7"
@@ -149,8 +157,9 @@
                 android:id="@+id/btn8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="8"
@@ -160,8 +169,9 @@
                 android:id="@+id/btn9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="9"
@@ -171,8 +181,9 @@
                 android:id="@+id/btnM"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="-"
@@ -188,8 +199,9 @@
                 android:id="@+id/btn4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="4"
@@ -199,8 +211,9 @@
                 android:id="@+id/btn5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="5"
@@ -210,8 +223,9 @@
                 android:id="@+id/btn6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="6"
@@ -221,8 +235,9 @@
                 android:id="@+id/btnP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="+"
@@ -239,8 +254,9 @@
                 android:id="@+id/btn1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="1"
@@ -250,8 +266,9 @@
                 android:id="@+id/btn2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="2"
@@ -261,8 +278,9 @@
                 android:id="@+id/btn3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="3"
@@ -272,8 +290,9 @@
                 android:id="@+id/btnR"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="="
@@ -289,8 +308,9 @@
                 android:id="@+id/btnPR"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="%"
@@ -300,8 +320,9 @@
                 android:id="@+id/btn0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="0"
@@ -311,8 +332,9 @@
                 android:id="@+id/btnZ"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="."
@@ -322,8 +344,9 @@
                 android:id="@+id/btnPM"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF8305"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="#3DED0C"
                 android:minWidth="100dp"
                 android:minHeight="100dp"
                 android:text="+/-"
